--- a/index.html
+++ b/index.html
@@ -10,11 +10,30 @@
     <body>
         <div class="fundo">
             <div class="conteudo">
-                <div class="titulo">
-                </div>
                 <div class="perfil">
-                    <h1>Barbearia Los Santos</h1>
-                    <p>Sempre próximo de você.</p>
+                    <div>
+                        <h2>Barbearia Los Santos</h2>
+                        <p>Sempre próximo de você.</p>
+                        <div class="icones">
+                            <div class="icone">
+                                <a href="https://www.instagram.com/barbearialossantosofc/">
+                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 200" style="fill: rgb(254, 254, 254); width: 28px; height: 28px; padding: 8px;"><path d="M65 16.667h70c26.667 0 48.333 21.666 48.333 48.333v70A48.334 48.334 0 0 1 135 183.333H65c-26.667 0-48.333-21.666-48.333-48.333V65A48.333 48.333 0 0 1 65 16.667m-1.667 16.666a30 30 0 0 0-30 30v73.334c0 16.583 13.417 30 30 30h73.334a30 30 0 0 0 30-30V63.333c0-16.583-13.417-30-30-30zm80.417 12.5a10.418 10.418 0 1 1 0 20.836 10.418 10.418 0 0 1 0-20.836M100 58.333a41.667 41.667 0 1 1 0 83.334 41.667 41.667 0 0 1 0-83.334M100 75a25 25 0 1 0 0 50 25 25 0 0 0 0-50"></path></svg>                            
+                                </a>
+                            </div>
+                            <div class="icone">
+                                <a href="#">
+                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 200" style="fill: rgb(254, 254, 254); width: 28px; height: 28px; padding: 8px;"><path d="M107.867 13.426v118.058c0 13.042-10.575 23.608-23.609 23.608-13.041 0-23.608-10.575-23.608-23.608 0-13.042 10.575-23.608 23.608-23.608V76.392c-30.425 0-55.091 24.667-55.091 55.092s24.666 55.092 55.091 55.092 55.092-24.667 55.092-55.092V76.392l1.658.834a66.6 66.6 0 0 0 29.817 7.041V52.776l-.942-.234c-17.95-4.483-30.541-20.617-30.541-39.116z"></path></svg>                            </a>
+                            </div>
+                            <div class="icone">
+                                <a href="#">
+                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 200" style="fill: rgb(254, 254, 254); width: 28px; height: 28px; padding: 8px;"><path d="m83.333 125 43.25-25-43.25-25zm96.334-65.25c1.083 3.917 1.833 9.167 2.333 15.833.583 6.667.833 12.417.833 17.417l.5 7c0 18.25-1.333 31.667-3.666 40.25-2.084 7.5-6.917 12.333-14.417 14.417-3.917 1.083-11.083 1.833-22.083 2.333-10.834.583-20.75.833-29.917.833l-13.25.5c-34.917 0-56.667-1.333-65.25-3.666-7.5-2.084-12.333-6.917-14.417-14.417-1.083-3.917-1.833-9.167-2.333-15.833-.583-6.667-.833-12.417-.833-17.417l-.5-7c0-18.25 1.333-31.667 3.666-40.25 2.084-7.5 6.917-12.333 14.417-14.417C38.667 44.25 45.833 43.5 56.833 43c10.834-.583 20.75-.833 29.917-.833l13.25-.5c34.917 0 56.667 1.333 65.25 3.666 7.5 2.084 12.333 6.917 14.417 14.417"></path></svg>                            </a>
+                            </div>
+                            <div class="icone">
+                                <a href="#">
+                                    <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium h-5 w-5 text-gray-700 css-q7mezt" style="fill: rgb(254, 254, 254); width: 28px; height: 28px; padding: 8px;" focusable="false" aria-hidden="true" viewBox="0 0 24 24" data-testid="ShareIcon"><path d="M18 16.08c-.76 0-1.44.3-1.96.77L8.91 12.7c.05-.23.09-.46.09-.7s-.04-.47-.09-.7l7.05-4.11c.54.5 1.25.81 2.04.81 1.66 0 3-1.34 3-3s-1.34-3-3-3-3 1.34-3 3c0 .24.04.47.09.7L8.04 9.81C7.5 9.31 6.79 9 6 9c-1.66 0-3 1.34-3 3s1.34 3 3 3c.79 0 1.5-.31 2.04-.81l7.12 4.16c-.05.21-.08.43-.08.65 0 1.61 1.31 2.92 2.92 2.92s2.92-1.31 2.92-2.92-1.31-2.92-2.92-2.92"></path></svg>                            </a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="acao webapp">
                 </div>
